crates/ferromark_renderer/tests/snapshots/renderer/base_url_leaves_protocol_relative_unchanged.snap
---
source: crates/ferromark_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "<script src=\"//cdn.example/app.js\"></script>\n"
---
<script src="//cdn.example/app.js"></script>
