crates/ferromark_renderer/tests/snapshots/renderer/base_url_prefixes_root_absolute_images.snap
---
source: crates/ferromark_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "![logo](/img/logo.png)\n"
---
<p><img src="/docs/img/logo.png" alt="logo"></p>
