crates/ferromark_renderer/tests/snapshots/renderer/empty_document.snap
---
source: crates/ferromark_renderer/tests/snapshot_render.rs
assertion_line: 29
description: ""
---

