crates/ferromark_renderer/tests/snapshots/renderer/fenced_code_with_lang.snap
---
source: crates/ferromark_renderer/tests/snapshot_render.rs
assertion_line: 29
description: "```ts\nconst x = 1;\n```\n"
---
<pre><code class="language-ts">const x = 1;
</code></pre>
